@@ -1,5 +1,7 @@
 package no.nav.foreldrepenger.vtp.server;
 
+import static no.nav.foreldrepenger.vtp.server.ApplicationConfigJersey.API_URI;
+
 import java.io.File;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
@@ -9,10 +11,10 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.logging.LogManager;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.apache.kafka.clients.admin.AdminClient;
 import org.eclipse.jetty.http.spi.JettyHttpServer;
 import org.eclipse.jetty.server.Connector;
 import org.eclipse.jetty.server.HandlerContainer;
@@ -24,23 +26,25 @@ import org.eclipse.jetty.server.ServerConnector;
 import org.eclipse.jetty.server.SslConnectionFactory;
 import org.eclipse.jetty.server.handler.ContextHandlerCollection;
 import org.eclipse.jetty.servlet.DefaultServlet;
+import org.eclipse.jetty.servlet.ServletContextHandler;
 import org.eclipse.jetty.servlet.ServletHolder;
 import org.eclipse.jetty.util.resource.Resource;
 import org.eclipse.jetty.webapp.WebAppContext;
+import org.glassfish.jersey.servlet.ServletContainer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.slf4j.bridge.SLF4JBridgeHandler;
 
+import io.swagger.jaxrs.config.BeanConfig;
 import no.nav.familie.topic.Topic;
 import no.nav.familie.topic.TopicManifest;
 import no.nav.foreldrepenger.util.KeystoreUtils;
 import no.nav.foreldrepenger.util.PropertiesUtils;
-import no.nav.foreldrepenger.vtp.kafkaembedded.LocalKafkaProducer;
 import no.nav.foreldrepenger.vtp.kafkaembedded.LocalKafkaServer;
 import no.nav.foreldrepenger.vtp.ldap.LdapServer;
 import no.nav.foreldrepenger.vtp.testmodell.repo.JournalRepository;
 import no.nav.foreldrepenger.vtp.testmodell.repo.TestscenarioBuilderRepository;
 import no.nav.foreldrepenger.vtp.testmodell.repo.impl.BasisdataProviderFileImpl;
-import no.nav.foreldrepenger.vtp.testmodell.repo.impl.DelegatingTestscenarioBuilderRepository;
 import no.nav.foreldrepenger.vtp.testmodell.repo.impl.DelegatingTestscenarioRepository;
 import no.nav.foreldrepenger.vtp.testmodell.repo.impl.JournalRepositoryImpl;
 import no.nav.foreldrepenger.vtp.testmodell.repo.impl.TestscenarioRepositoryImpl;
@@ -65,6 +69,11 @@ public class MockServer {
     private JettyHttpServer jettyHttpServer;
     private String host = HTTP_HOST;
 
+    static {
+        LogManager.getLogManager().reset();
+        SLF4JBridgeHandler.install();
+    }
+
     public MockServer() throws Exception {
         this.port = Integer.parseInt(System.getProperty("autotest.vtp.port", SERVER_PORT));
 
@@ -74,7 +83,7 @@ public class MockServer {
         server = new Server();
         setConnectors(server);
 
-        ContextHandlerCollection contextHandlerCollection = new ContextHandlerCollection();
+        var contextHandlerCollection = new ContextHandlerCollection();
         server.setHandler(contextHandlerCollection);
 
         ldapServer = new LdapServer(new File(KeystoreUtils.getKeystoreFilePath()), KeystoreUtils.getKeyStorePassword().toCharArray());
@@ -91,12 +100,8 @@ public class MockServer {
     }
 
     public void start() throws Exception {
-        if(!tjenesteDisabled(VTPTjeneste.VTP_LDAP)){
-            startLdapServer();
-        }
-        if(!tjenesteDisabled(VTPTjeneste.VTP_KAFKA)){
-            startKafkaServer();
-        }
+        startLdapServer();
+        startKafkaServer();
         startWebServer();
     }
 
@@ -137,7 +142,7 @@ public class MockServer {
     private static List<String> getEnvValueList(String envName) {
         return Arrays.stream((null != System.getenv(envName) ? System.getenv(envName) : "").split(","))
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Object getTopic(Field f) {
@@ -150,29 +155,36 @@ public class MockServer {
 
     @SuppressWarnings("resource")
     private void startWebServer() throws Exception {
+        var instance = TestscenarioRepositoryImpl.getInstance(BasisdataProviderFileImpl.getInstance());
+        var testScenarioRepository = new DelegatingTestscenarioRepository(instance);
+        var gsakRepo = new GsakRepo();
+        var journalRepository = JournalRepositoryImpl.getInstance();
+
         var handler = (HandlerContainer) server.getHandler();
 
-        var testScenarioRepository = new DelegatingTestscenarioRepository(
-                TestscenarioRepositoryImpl.getInstance(BasisdataProviderFileImpl.getInstance()));
-        var gsakRepo = new GsakRepo();
-        JournalRepository journalRepository = JournalRepositoryImpl.getInstance();
-
-        addRestServices(handler,
-                testScenarioRepository,
-                gsakRepo,
-                kafkaServer.getLocalProducer(),
-                kafkaServer.getKafkaAdminClient(),
-                journalRepository);
-
+        addRestServices(testScenarioRepository, instance, gsakRepo, journalRepository, handler);
 
         addWebResources(handler);
 
         startServer();
 
         // kjør soap oppsett etter jetty har startet
-        if(!tjenesteDisabled(VTPTjeneste.VTP_SOAP)) {
-            addSoapServices(testScenarioRepository, journalRepository);
-        }
+        addSoapServices(testScenarioRepository, journalRepository);
+    }
+
+    private void addRestServices(DelegatingTestscenarioRepository testScenarioRepository, TestscenarioRepositoryImpl instance, GsakRepo gsakRepo, JournalRepositoryImpl journalRepository, HandlerContainer handler) {
+        var config = new ApplicationConfigJersey()
+                .setup(testScenarioRepository,
+                        instance,
+                        gsakRepo,
+                        kafkaServer.getLocalProducer(),
+                        kafkaServer.getKafkaAdminClient(),
+                        journalRepository);
+
+        var context = new ServletContextHandler(handler, "/rest");
+        var jerseyServlet = new ServletHolder(new ServletContainer(config));
+        jerseyServlet.setInitOrder(1);
+        context.addServlet(jerseyServlet, "/*");
     }
 
     private void startLdapServer() {
@@ -191,26 +203,28 @@ public class MockServer {
         new SoapWebServiceConfig(jettyHttpServer).setup(testScenarioRepository, journalRepository);
     }
 
-    protected void addRestServices(HandlerContainer handler, DelegatingTestscenarioBuilderRepository testScenarioRepository,
-                                   GsakRepo gsakRepo, LocalKafkaProducer localKafkaProducer, AdminClient kafkaAdminClient,
-                                   JournalRepository journalRepository) {
-        new RestConfig(handler).setup(testScenarioRepository, gsakRepo, localKafkaProducer, kafkaAdminClient,journalRepository);
-    }
 
-    protected void addWebResources(HandlerContainer handlerContainer) {
-        @SuppressWarnings("resource")
-        var ctx = new WebAppContext(handlerContainer, Resource.newClassPathResource("/swagger"), "/swagger");
+    protected void addWebResources(HandlerContainer handler) {
+        // Swagger
+        var beanConfig = new BeanConfig();
+        beanConfig.setVersion("1.0");
+        beanConfig.setSchemes(new String[] { "http", "https" });
+        beanConfig.setBasePath(API_URI);
+        beanConfig.setTitle("VLMock2 - Virtualiserte Tjenester");
+        beanConfig.setResourcePackage("no.nav");
+        beanConfig.setDescription("REST grensesnitt for VTP.");
+        beanConfig.setScan(true);
 
-
+        var swaggerPath = "/swagger";
+        var ctx = new WebAppContext(handler, Resource.newClassPathResource(swaggerPath), swaggerPath);
         ctx.setThrowUnavailableOnStartupException(true);
         ctx.setLogUrlOnStart(true);
 
         var defaultServlet = new DefaultServlet();
-
-        ServletHolder servletHolder = new ServletHolder(defaultServlet);
+        var servletHolder = new ServletHolder(defaultServlet);
         servletHolder.setInitParameter("dirAllowed", "false");
 
-        ctx.addServlet(servletHolder, "/swagger");
+        ctx.addServlet(servletHolder, swaggerPath);
 
     }
 
@@ -255,22 +269,6 @@ public class MockServer {
         sslConnector.setPort(getSslPort());
         connectors.add(sslConnector);
         server.setConnectors(connectors.toArray(new Connector[0]));
-    }
-
-    private boolean tjenesteDisabled(VTPTjeneste tjeneste){
-        var miljøVariabel = tjeneste.name().concat("_DISABLE");
-        if(System.getenv(miljøVariabel) != null && System.getenv(miljøVariabel).equalsIgnoreCase("true")){
-            LOG.info("Tjeneste er disabled: {}", tjeneste.name());
-            return true;
-        }
-        return false;
-    }
-
-    private enum VTPTjeneste {
-        VTP_SOAP,
-        VTP_REST,
-        VTP_KAFKA,
-        VTP_LDAP
     }
 
     private Integer getSslPort() {
